alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,23 @@
+.navbar {
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  }
 .card-text
 {
     margin-bottom: 0rem !important;
 }
 .card-body
 {
-    padding: 0.2rem 0.2rem !important;
+    padding: 0.2rem 0.4rem !important;
+    height: 100px;
+}
+.card-body-section-one{
+    height:50px;
+}
+.card-body-section-two{
+    height: 20px;
+}
+.card-body-section-three{
+    height: 25px;
 }
 .headings
 {
